--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Header: ->Header1<- -->Header2<-- --->Header3<---
       
       <a class="button" onclick="exportTxt()">Export as *.txt</a>
       <a class="button" style="background-color:#0086d3" onclick="exportHtml()">Export as *.html</a>
-      <a class="button" style="background-color:#d34d00" onclick="exportPdf()">Export as *.pdf</a> 
+      <a class="button" style="background-color:#d34d00" onclick="exportPdf()">Export as *.pdf (not properly working)</a> 
       &nbsp;&nbsp;&nbsp;&nbsp;Alternatively brought to you by Pat ∙ Using <a href="https://github.com/MrRio/jsPDF">jsPDF</a>
     </div>
     
